--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ set -g status-keys vi
 
 bind -n M-0 select-window -t 0
 bind -n M-1 select-window -t 1
-bind -n M-2 select-window - 2
+bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
 bind -n M-4 select-window -t 4
 bind -n M-5 select-window -t 5
