--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 setw -g utf8 on
 set -g status-utf8 on
-#set mouse-utf8 on
+set -g mouse-utf8 off
 
 setw -g mode-keys vi
 set -g status-keys vi
@@ -24,13 +24,14 @@ bind C-c run "tmux save-buffer - | xclip -i -selection clipboard"
 bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
 
 set-option -g default-shell /bin/bash
-#set -g terminal-overrides "xterm*:smcup@:rmcup@"
+set -g terminal-overrides "xterm*:smcup@:rmcup@"
 set -g default-terminal "screen"
+setw -g xterm-keys off
 
 setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
 set -g visual-activity off
 set -g visual-bell off
