Remove rtorrent config Fix tmux time/date format Fix ExtraWhitespace matching in vim Add synergy to autostart

--- a/tmux.conf
+++ b/tmux.conf
@@ -60,6 +60,6 @@ setw -g window-status-current-bg brightblue
 set -g status-left '#[fg=white,bg=brightyellow] #h:#S #[default]'
 setw -g window-status-format ' [#I]#W #[default]'
 setw -g window-status-current-format ' [#I]#W #[default]'
-set -g status-right "#[bg=brightred]#(~/.tmux-cmus.sh)#[bg=brightyellow]#(~/.tmux-xlayout.sh)#[bg=brightgreen] %d.%m.%Y %H:%M #[default]"
+set -g status-right "#[bg=brightred]#(~/.tmux-cmus.sh)#[bg=brightyellow]#(~/.tmux-xlayout.sh)#[bg=brightgreen] %I:%M %p %x #[default]"
 
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
